<resources>
    <string name="app_name">Plejeren</string>
    <string name="hello_plejeren">Hello Plejeren!</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="todo">TODO</string>
    <string name="byskjold_image">byskjold image</string>
    <string name="Arbejdsplan">Arbejdsplan</string>
    <string name="arbejdsplan">Arbejdsplan</string>
    <string name="TidsStempling">Tids Stempling</string>
    <string name="hello_trackerone">hello_trackerone</string>
    <string name="get_location">get_location</string>
    <string name="workplan">Workplan!</string>
    <string name="opret_bruger">opret bruger</string>
    <string name="engangsn_gle">Engangsnøgle</string>
    <string name="button">Button</string>
    <string name="_00_00">00:00</string>
    <string name="textview">TextView</string>
    <string name="kalender">Kalender</string>
    <string name="nulstil_kodeord">nulstil kodeord</string>
    <string name="opret_en_bruger">Opret en bruger</string>
    <string name="plejeren">plejeren</string>
    <string name="e_mail">E-mail</string>
    <string name="kodeord">Kodeord</string>
    <string name="login">login</string>
    <string name="glemt_dit_kodeord">Glemt dit kodeord?</string>
    <string name="noter">Noter</string>
    <string name="NOTER">NOTER</string>
    <string name="gem">Gem</string>
    <string name="logout">logout</string>

    <string-array name="tasks_array">
        <item>Rengøring</item>
        <item>Vask</item>
        <item>Oprydning</item>
        <item>Dosering af piller</item>
        <item>Indkøb</item>
    </string-array>
</resources>
